changing z-index for avoiding incorrect value in browser

--- a/src/globalstyles/GlobalStyles.scss
+++ b/src/globalstyles/GlobalStyles.scss
@@ -63,7 +63,7 @@ html {
    @include flexCenter(column, center);
    gap: 2rem;
 
-   z-index: 100000000000000000000000000000000;
+   z-index: 100000001;
    position: absolute;
    height: 100vh;
    width: 100vw;
